--- a/src/client/src/sections/Catalog/catalogSkeleton.scss
+++ b/src/client/src/sections/Catalog/catalogSkeleton.scss
@@ -60,12 +60,12 @@
   }
 }
 
-.keenSlider--content {
-  flex: '1 0 auto';
-  font-size: clamp(0.2em, 0.5em, 1em);
-  align-content: flex-end;
-  z-index: 1;
-}
+// .keenSlider--content {
+//   flex: '1 0 auto';
+//   font-size: clamp(0.2em, 0.5em, 1em);
+//   align-content: flex-end;
+//   z-index: 1;
+// }
 
 .MuiBox-root {
   &.card--grid {
